# Learning

./: .gitignore  README.md  afile  afile.pub  pyproject.toml
Airflow/airflow/dags/: branching.py  branching_trigger_rules.py  etl_pipeline_employees.py  first_dag.py
Airflow/airflow/theory/: airflow.md
Airflow/airflow1/: comandos-aulas.txt
Airflow/airflow1/dags/: branching.py  (+19 more)
ComputerVision/: FaceRecognition.md
CreditScoring/: 4-Sampling.ipynb
CursoPowerBI/PowerBI-DadosCriativos/: Modulo8-ProjetoPratico:memory:.ses
DashBoards/: Dash_Review.ipynb
DashBoards/review_dashboard/: app_dash1.py
DataEngineering/: DataEngineeringReview.md  readme.md
DataEngineering/MINIO_Pyspark/: docker-compose.yml
DataScience/: README.md
DataScience/ML-ValidationTechniques/: 0_data_prep.ipynb  TS Advanced Validation.xlsx
Docker/: DcokerBasic.md  DockerBasic.md
Docker/DSenvironment/: docker-compose.yml
Docker/DockerPythonAndR/: AmbientesVirtuais_venv.ipynb  WorkWithRInContainer.ipynb
GENAI/: LLM_Estudo_pequeno_porte.ipynb  MasterClass_LLMs.ipynb  pyproject.toml
Geoestatistica_pdi/: GeopandasIntroduction.ipynb
Kubernets/spark_on_kubernetes_series/: Dockerfile  Makefile  kind.yaml  readme.md
LULC/: land_cover_classification.ipynb  lulc.js  requirements.txt
LULC/data/: Sample_LC_assuncao_island.geojson  Sample_LC_v1.geojson  lc.json  lc_island.json
MLOps101/: README.md
MLOps101/00-Diagrams/: MLOps_desingn.excalidraw
MLOps101/01-install-depend/: README.MD
MLOps101/02-MLOps-intro-poetry/: .env  Makefile  README.md  justfile  pyproject.toml
MLOps101/02-MLOps-intro-poetry/examples/: script_with_argument.py  script_with_dep.py  simple_script.py
MLOps101/02-MLOps-intro-poetry/tasks/: README.md  justfile  pyproject.toml
MLOps101/02-MLOps-intro-poetry/tasks/Data/: sales_data.csv
MLOps101/02-MLOps-intro-poetry/tasks/scripts/: data_analysis.py
MLOps101/03-FastAPI/: README.md  database.db  justfile  pyproject.toml
MLOps101/03-FastAPI/examples/api/: api_data_source.py
MLOps101/03-FastAPI/examples/api_inference/: api_ml_predict.py
MLOps101/03-FastAPI/img/: MLOps_desingn.excalidraw
MLOps101/03-FastAPI/tasks/: README.md
MLOps101/03-FastAPI/tasks/SAProject/: database.db  justfile  pyproject.toml
MLOps101/03-FastAPI/tasks/SAProject/api/: api.py  api_tools.py  authentication.py  database.py  model.py  sql_queries.py
MLOps101/03-FastAPI/tasks/SAProject/app/: sa_app.py
MLOps101/04-Airflow/: README.md
MLOps101/05-Docker/: DockerBasic.md  README.md
Probability/: CombinatorialAnalysis.ipynb  IntroductionFactorial.ipynb
Python/EfficientPython/: numpy_lib.py  p1_basics.py  p3_code_evaluating_tools.py  p3_module_test.py
Python/PythonDataAnalysis/: NumpyBasic.ipynb  PandasBancodeDados.ipynb  PandasDataFrame.ipynb  PandasVisualization.ipynb
Python/PythonPlotly/: PlotlyPart_I.ipynb
Python/WebScraping/: WebScraping.md
RemoteSensing/GEE/: gee_m01_c03.js  gee_m01_c04.js  gee_m01_c05.js  gee_m02_c01.js  gee_m02_c04.js  gee_m03_c01.js  gee_m03_c02.js  gee_m03_c03.js  gee_m03_c04.js  gee_m03_c05.js
RemoteSensing/GeoR/: kmeans_grouped_by_random_forest.R
TimeSeries/: README.md
TimeSeries/.ipynb_checkpoints/: timeseries_part1-checkpoint.ipynb  timeseries_part2-checkpoint.ipynb
TimeSeries/timeseries_review/: timeserietools.py
VSCodeSettings/: configSettingSync.md
(+141 files in other folders)
