[tool.poetry]
name = "data-analysis"
version = "0.1.0"
description = "This is a project to analyze sales price."
authors = ["wesleyjw"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
