[tool.poetry]
name = "api"
version = "0.0.0"
description = "Building an api with fastapi"
authors = ["wesleyjw"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
